Fix alignment of australia icon in intermediate width views

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,6 +45,9 @@ html, body{
   height: $navbar-height * 0.7;
 }
 
+.main-logo{
+  margin-top:-6px;
+}
 /*** OVERRIDE BOOTSTRAP THEME ***/
 /*.themes-nav{
   padding-top:8px;
